# Anomaly-Detector-AP1

./: .gitignore  CMakeLists.txt  README.md  main.cpp
ass1/: MainTrain.cpp
ass1-adam/: MainTrain.cpp  anomaly_detection_util.cpp  anomaly_detection_util.h
ass1-oz/: MainTrain.cpp  anomaly_detection_util.cpp
ass2/: AnomalyDetector.h  MainTrain.cpp  SimpleAnomalyDetector.cpp  SimpleAnomalyDetector.h  anomaly_detection_util.cpp  anomaly_detection_util.h  timeseries.cpp  timeseries.h
ass4/: CLI.cpp
ass4/Anomaly-detection/: AnomalyDetector.h  HybridAnomalyDetector.cpp  HybridAnomalyDetector.h  MainTrain.cpp  SimpleAnomalyDetector.cpp  SimpleAnomalyDetector.h  anomaly_detection_util.cpp  anomaly_detection_util.h  minCircle.cpp  minCircle.h  timeseries.cpp  timeseries.h
ass4/Command/: CLI.cpp  CLI.h  MainTrain.cpp  commands.h  input.txt
ass4/IO/: DefaultIO.h  StandartIO.cpp  StandartIO.h
ass4/make/: a.out  makefile
ass4/server/: MainTrain.cpp  Server.cpp  Server.h  file.csv
serv_test/: client.cpp  client.h  server.cpp  server.h
